Updated model and tests for WeatherDataRetrievers
Bug fixed when searching data for locations that contained certain ascii/non-ascii characters would cause exceptions.

Updated test for current/daily weather data retrievers to achieve sufficient code coverage.